# LibraryManagementSystem

./: CMakeLists.txt
data/: config.json
include/: Admin.h  Book.h  Json_storage.h  Library.h  Menu.h  Transaction.h  User.h  Utility.h
src/: Book.cpp  Json_storage.cpp  Library.cpp  Menu.cpp  Transaction.cpp  User.cpp  Utility.cpp  main.cpp
